tests/ui/test_attr_wrong_literal_type.stderr
error: `cases` expects an integer literal, not a string
 --> tests/ui/test_attr_wrong_literal_type.rs:3:16
  |
3 | #[test(cases = "100")]
  |                ^^^^^
