tests/ui/test_attr_wrong_literal_type.rs
use quickcheck_richderive::test;

#[test(cases = "100")]
fn t(x: u8) -> bool {
  let _ = x;
  true
}

fn main() {}
